@@ -66,8 +66,15 @@ class OffsetAndLimitTestSqlserver < ActiveRecord::TestCase
 
     should 'alter SQL to limit number of records returned offset by specified amount' do
       options = { :limit => 3, :offset => 5 }
-      expected_sql = %&SELECT * FROM (SELECT TOP 3 * FROM (SELECT TOP 8 * FROM books) AS tmp1) AS tmp2&
+      expected_sql = "SELECT * FROM (SELECT TOP 3 * FROM (SELECT TOP 8 * FROM books) AS tmp1) AS tmp2"
       assert_equal(expected_sql, @connection.add_limit_offset!(@select_sql, options))
+    end
+    
+    should 'add locks to deepest sub select in limit offset sql that has a limited tally' do
+      options = { :limit => 3, :offset => 5, :lock => 'WITH (NOLOCK)' }
+      expected_sql = "SELECT * FROM (SELECT TOP 3 * FROM (SELECT TOP 8 * FROM books WITH (NOLOCK)) AS tmp1) AS tmp2"
+      @connection.add_limit_offset! @select_sql, options
+      assert_equal expected_sql, @connection.add_lock!(@select_sql,options)
     end
 
     # Not really sure what an offset sql injection might look like
@@ -80,6 +87,18 @@ class OffsetAndLimitTestSqlserver < ActiveRecord::TestCase
       options = { :limit => 5, :offset => 1 }
       expected_sql = "SELECT * FROM (SELECT TOP 5 * FROM (SELECT TOP 6 *, (SELECT TOP 1 id FROM books) AS book_id FROM books) AS tmp1) AS tmp2"
       assert_equal expected_sql, @connection.add_limit_offset!(@subquery_select_sql,options)
+    end
+    
+    should 'add lock hints to tally sql if :lock option is present' do
+      assert_sql %r|SELECT TOP 1000000000 \* FROM \[people\] WITH \(NOLOCK\)| do
+        Person.all :limit => 5, :offset => 1, :lock => 'WITH (NOLOCK)'
+      end
+    end
+    
+    should 'not add lock hints to tally sql if there is no :lock option' do
+      assert_sql %r|\(SELECT TOP 1000000000 \* FROM \[people\] \)| do
+        Person.all :limit => 5, :offset => 1
+      end
     end
     
   end
